html and Js files are updated.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 
   <footer>
+    <script type="text/javascript" src="index.js" charset="utf-8">
+
+    </script>
     Made with ❤️ in London.
   </footer>
 </body>
