--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="index.js" charset="utf-8">
 
     </script>
-    Made with ❤️ in London.
+    Made with ❤️ in India.
   </footer>
 </body>
 
